# neptune

./: README.md  gen_amplitudes.py  pyproject.toml
.claude/: settings.json
assets/: _render_logo.py
draft/: main.aux  main.blg  main.out  main.tex  main_SBN.aux  main_SBN.blg  main_SBN.out  main_SBN.tex
examples/: Example_1_trident_events.ipynb  Example_2_nu_electron_scattering.ipynb  Example_3_experiments_trident_rates.ipynb  Example_4_SNS_dielectron_tridents.ipynb
mathematica/: BSM_trident.nb  README.md  export_TL_pieces.wl
src/neptune/: MC.py  __init__.py  _tl_amplitude.py  amplitudes.py  const.py  integrands.py  model.py  nu_electron.py  nuclear_tools.py  phase_space.py  processes.py
src/neptune_trident.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dis_phase_space.py  test_tl_amplitude.py  test_trident_integration.py
